test(m20): lock quiet packaged runtime contracts